sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:4: error: not found: value ecart
  ecart = getNombreValeurs() / 2
  ^AlgShellSort:6: error: not found: value ecart
  while (ecart > 0)
         ^AlgShellSort:9: error: not found: value i
    var derniereCase = getValeur(i)
                                 ^AlgShellSort:10: error: not found: value i
    while (i - differenceCases * ecart >= 0 && getValeur(i - differenceCases * ecart) > derniereCase)
           ^AlgShellSort:10: error: not found: value ecart
    while (i - differenceCases * ecart >= 0 && getValeur(i - differenceCases * ecart) > derniereCase)
                                 ^AlgShellSort:10: error: not found: value i
    while (i - differenceCases * ecart >= 0 && getValeur(i - differenceCases * ecart) > derniereCase)
                                                         ^AlgShellSort:10: error: not found: value ecart
    while (i - differenceCases * ecart >= 0 && getValeur(i - differenceCases * ecart) > derniereCase)
                                                                               ^AlgShellSort:12: error: not found: value i
      setValeur(i - (differenceCases + 1) * ecart, getValeur(i - differenceCases * ecart))
                ^AlgShellSort:12: error: not found: value ecart
      setValeur(i - (differenceCases + 1) * ecart, getValeur(i - differenceCases * ecart))
                                            ^AlgShellSort:12: error: not found: value i
      setValeur(i - (differenceCases + 1) * ecart, getValeur(i - differenceCases * ecart))
                                                             ^AlgShellSort:12: error: not found: value ecart
      setValeur(i - (differenceCases + 1) * ecart, getValeur(i - differenceCases * ecart))
                                                                                   ^AlgShellSort:15: error: not found: value i
    setValeur(i - (differenceCases + 1) * ecart, derniereCase)
              ^AlgShellSort:15: error: not found: value ecart
    setValeur(i - (differenceCases + 1) * ecart, derniereCase)
                                          ^